Fix stale JDK-version gates in Memory advisor's JVM-tuning calculator (#481)
Light re-check of the Memory advisor (previously hardened in 961d9c47 and
569acc73) against current JDK ergonomics. Found two flag-currency bugs in
MemoryCalculator.appendCommonOptions(), the JVM-options generator behind the
Kubernetes memory-sizing panel, both verified empirically against real
JDK 17/21/25/26 binaries:

- -XX:+ZGenerational was emitted through JDK 23, but JEP 474 (JDK 23) already
  makes generational ZGC the default and deprecates the explicit flag
  (prints a warning); JEP 490 (JDK 24) obsoletes it further, and by JDK 26 the
  flag is no longer recognized at all and the JVM refuses to start. Narrowed
  the gate from `< 24` to `< 23` so the flag is only emitted on JDK 21/22,
  where it is the documented experimental opt-in.
- -XX:+UseStringDeduplication was appended unconditionally once ZGC was
  selected (heap >= 4 GiB), but ZGC did not gain string-deduplication support
  until JDK 18 (G1 has had it since JDK 8u20 / JEP 192). On JDK 17 with a
  large heap the JVM still starts but prints "String Deduplication disabled:
  not supported by selected GC" and silently drops the flag. Now only emitted
  for ZGC on JDK >= 18; G1 keeps it unconditionally.

Adds 3 tests to MemoryCalculatorTests covering both boundaries (JDK 21/22/23/
24/25 for ZGenerational; JDK 17/18/21 x ZGC and JDK 17 x G1 for
UseStringDeduplication).

No other issues found in this pass: reviewed all 32 rules in MemoryRules.java,
the concurrent-GC inflation fix from 569acc73 (isConcurrentCycleBean), the
container/cgroup v1+v2 limit detection, and the Kubernetes sizing logic in
MemoryKubernetesSizer — all still correct and current.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>